# Abschlussprojekt_programmieruebungII

./: Person.py  README.md  cleandata.py  ctg_simulator.py  main.py  pyproject.toml  read_CSV.py  report_generator.py  requirements.txt  wehen_analysis.py
.streamlit/: config.toml
data/: CTG_data3.csv  person_db.json
data/CTG_data/: CTG_data1.csv  CTG_data2.csv  CTG_data3.csv  CTG_twins_healthy.csv  CTG_twins_hypertension.csv
