[project]
name = "Abschlussprojekt_programmieruebungII"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mak2494", email = "km2430@mci4me.at"},
]
dependencies = ["streamlit>=1.45.1", "plotly>=6.1.2", "nbformat>=5.10.4"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
