[project]
name = "Abschlussprojekt_programmieruebungII"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mak2494", email = "km2430@mci4me.at"},
]
dependencies = ["streamlit>=1.45.1", "plotly>=6.2.0", "nbformat>=5.10.4", "fpdf>=1.7.2", "kaleido>=1.0.0", "scipy>=1.16.0", "matplotlib>=3.10.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
